Fix jump effect when window control buttons are clicked

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -304,7 +304,7 @@ button {
   button:checked {
     color: #d8dee9;
     outline-color: rgba(216, 222, 233, 0.3);
-    background: #414a5b;
+    background-color: #414a5b;
     text-shadow: none;
     transition-duration: 50ms; }
   notebook > header > tabs > arrow:backdrop, notebook > header > tabs > arrow:backdrop,
@@ -616,7 +616,7 @@ button.suggested-action {
   button.suggested-action:checked {
     color: white;
     outline-color: rgba(255, 255, 255, 0.3);
-    background: #88c0d0;
+    background-color: #88c0d0;
     text-shadow: none; }
   .selection-mode button.titlebutton:backdrop,
   button.suggested-action:backdrop,
@@ -766,7 +766,7 @@ button.destructive-action {
   button.destructive-action:checked {
     color: white;
     outline-color: rgba(255, 255, 255, 0.3);
-    background: #a9444e;
+    background-color: #a9444e;
     text-shadow: none; }
   
   button.destructive-action:backdrop,
@@ -2363,7 +2363,7 @@ headerbar {
     headerbar button:checked {
       color: #fff;
       outline-color: rgba(255, 255, 255, 0.3);
-      background: #4c566a;
+      background-color: #4c566a;
       text-shadow: none; }
     .titlebar button:backdrop, .titlebar button:disabled, .titlebar button:backdrop:disabled,
     headerbar button:backdrop,
@@ -2406,7 +2406,7 @@ headerbar {
       headerbar button.suggested-action:active {
         color: white;
         outline-color: rgba(255, 255, 255, 0.3);
-        background: #88c0d0;
+        background-color: #88c0d0;
         text-shadow: none; }
       .titlebar button.suggested-action:disabled,
       headerbar button.suggested-action:disabled {
@@ -2452,7 +2452,7 @@ headerbar {
       headerbar button.destructive-action:active {
         color: white;
         outline-color: rgba(255, 255, 255, 0.3);
-        background: #a9444e;
+        background-color: #a9444e;
         text-shadow: none; }
       .titlebar button.destructive-action:disabled,
       headerbar button.destructive-action:disabled {
@@ -2552,7 +2552,7 @@ headerbar {
   headerbar .path-bar-box button:checked {
     color: #fff;
     outline-color: rgba(255, 255, 255, 0.3);
-    background: #4c566a;
+    background-color: #4c566a;
     text-shadow: none; }
     .titlebar .linked > button:active:backdrop,
     .titlebar headerbar .linked > button:active:backdrop, .titlebar .path-bar-box button:active:backdrop, headerbar .path-bar-box .titlebar button:active:backdrop, .titlebar .linked > button:checked:backdrop,
@@ -2602,7 +2602,7 @@ headerbar {
     border-radius: 0px 4px 4px 0px;
     color: #d8dee9;
     outline-color: rgba(216, 222, 233, 0.3);
-    background: #4c566a;
+    background-color: #4c566a;
     text-shadow: none; }
     .titlebar .path-bar-box widget > .text-button:last-child:backdrop, .titlebar .path-bar-box widget > .text-button:last-child:backdrop label,
     headerbar .path-bar-box widget > .text-button:last-child:backdrop,
@@ -6153,7 +6153,7 @@ ConversationListView {
   #content_frame button:active, #content_frame button:checked {
     color: #d8dee9;
     outline-color: rgba(216, 222, 233, 0.3);
-    background: #4c566a;
+    background-color: #4c566a;
     text-shadow: none; }
   #content_frame button:disabled {
     color: #b6bcc8;
